--- a/index.html
+++ b/index.html
@@ -7,130 +7,143 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <div class="flex flex-col justify-center items-center p-5">
+    <div id="calculator" class="flex flex-col justify-center items-center p-5">
       <div class="border-2 border-black-400 rounded-lg pb-4 pt-2 pr-4 pl-4">
         <section id="name" class="flex flex-col">
           <h1 class="text-3xl text-center font-bold underline">Calculator</h1>
         </section>
-        <section id="display" class="flex flex-col items-center mt-4">
+        <section class="flex flex-col items-center mt-4">
           <input
             type="text"
-            id="displayInput"
+            id="display"
             class="border-2 border-black-200 rounded p-2 h-15"
             placeholder="0"
             readonly
           />
         </section>
-        <section
+        <form
           id="numberButtons"
           class="flex flex-col grid grid-cols-4 gap-2 pt-2"
         >
-          <button
-            onclick="appendToDisplay()"
-            id="btn1"
+          <input
+            type="button"
+            id="button1"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            1
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn2"
+            value="1"
+            onclick="appendNumber(1)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="button2"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            2
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn3"
+            value="2"
+            onclick="appendNumber(2)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="button3"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            3
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn/"
+            value="3"
+            onclick="appendNumber(3)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="Divide"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            /
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn4"
+            value="/"
+            onclick="appendOperator('/')"
+            class="operator"
+          />
+          <input
+            type="button"
+            id="button4"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            4
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn5"
+            value="4"
+            onclick="appendNumber(4)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="button5"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            5
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn6"
+            value="5"
+            onclick="appendNumber(5)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="button6"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            6
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btnMultiply"
+            value="6"
+            onclick="appendNumber(6)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="Multiply"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            x
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn7"
+            value="*"
+            onclick="appendOperator('*')"
+            class="operator"
+          />
+          <input
+            type="button"
+            id="button7"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            7
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn8"
+            value="7"
+            onclick="appendNumber(7)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="button8"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            8
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btn9"
+            value="8"
+            onclick="appendNumber(8)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="button9"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            9
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btnAddition"
+            value="9"
+            onclick="appendNumber(9)"
+            class="digit"
+          />
+          <input
+            type="button"
+            id="Addition"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            +
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btnSubtract"
+            value="+"
+            onclick="appendOperator('+')"
+            class="operator"
+          />
+          <input
+            type="button"
+            id="Subtract"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            -
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btnEquals"
+            value="-"
+            onclick="appendOperator('-')"
+            class="operator"
+          />
+          <input
+            type="button"
+            id="Equals"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            =
-          </button>
-          <button
-            onclick="appendToDisplay()"
-            id="btnClear"
+            value="="
+            onclick="calculateResult()"
+          />
+          <input
+            type="button"
+            id="Clear"
             class="border-1 border-black-100 rounded-lg w-9"
-          >
-            C
-          </button>
-        </section>
+            value="C"
+            onclick="clearDisplay()"
+          />
+        </form>
       </div>
     </div>
     <script src="index.js"></script>
